feat: brewery invite
